@@ -54,6 +54,8 @@ Enhancements:
   - move netloc usage definitions into respective backends
   - fix "[Question #259173]: rsync backend fails"
     https://answers.launchpad.net/duplicity/+question/259173
+* Make ssh an unsupported backend scheme
+* Temporarily disable RsyncBackendTest and test_verify_changed_source_file
 
 
 New in v0.7.00 (2014/10/23)
